# quoth

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  quothbot.py  requirements-dev.txt  requirements.txt
.github/workflows/: push.yaml  tests.yaml
config/: config.yaml
src/quoth/: __main__.py  bot.py  data.py  errors.py  model.py
src/quoth/ext/: __init__.py  quoth.py
src/quoth/utils/: config.py  logging.py  message.py
src/quothbot/: __main__.py  bot.py  data.py  quothbot.py
src/quothbot/ext/: quoth.py  react.py  topbot.py
src/quothbot/utils/: config.py  message.py  path.py  string.py
tests/: test_bot.py
utils/: config.py  data.py  func.py  topbot.py
